'class' and 'extends' keywords, 'get' method in Object

--- a/oop/Class.template
+++ b/oop/Class.template
@@ -5,8 +5,7 @@ OOP=../oop
 . $OOP/oop
 
 %classname%() {
-    . $OOP/class extends %parentclassname% $@
-    . $OOP/scope
+    %parentclassname%
 
     case $__method__ in
         
